<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ru.editor</groupId>
  <artifactId>binaryeditor</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>server</module>
    <module>core</module>
    <module>angular</module>
  </modules>

  <properties>
    <java.version>8</java.version>
    <spring-boot.version>2.1.4.RELEASE</spring-boot.version>
    <lombok.version>1.18.6</lombok.version>
    <commons-beanutils.version>1.9.3</commons-beanutils.version>
    <simple-xml.version>2.7.1</simple-xml.version>
    <commons-configuration2.version>2.4</commons-configuration2.version>
  </properties>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>ru.editor</groupId>
        <artifactId>server</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>ru.editor</groupId>
        <artifactId>core</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>ru.editor</groupId>
        <artifactId>angular</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-actuator</artifactId>
        <version>${spring-boot.version}</version>
      </dependency>

      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-configuration2</artifactId>
        <version>${commons-configuration2.version}</version>
        <scope>compile</scope>
      </dependency>

      <dependency>
        <groupId>org.simpleframework</groupId>
        <artifactId>simple-xml</artifactId>
        <version>${simple-xml.version}</version>
        <scope>compile</scope>
      </dependency>

      <dependency>
        <groupId>commons-beanutils</groupId>
        <artifactId>commons-beanutils</artifactId>
        <version>${commons-beanutils.version}</version>
        <scope>compile</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>

          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring-boot.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>repackage</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
          </configuration>
        </plugin>

      </plugins>
    </pluginManagement>
  </build>

</project>
